Fix screen width to work correctly on mobile devices and improve text alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,11 @@
 html {
     font-size: 16px;
     font-family: monospace;
+    text-align: center;
 }
 
 body {
-    min-width: 100vh;
+    min-width: 100vw;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
